Make Catapult "build" as a part of Chromium under Python 3.
Specifically, what this means is that you can use Python3 for *most*
of the build, in the sense that you can run
`gn gen --script-executable=python3 //out/Default &&
 ninja -C out/Default` and it should work just as a normal build
would work.

It does *not* yet mean that Python2 is not required; there are still
many steps of the build that require Python2, and you must still have
a Python 2 binary on your system. However, at least now all of
those places are known and annotated accordingly, so that we can
then track fixing them explicitly.

See https://crrev.com/c/2333868 for the roll-up Chromium patch,
which also has multiple other dependencies.

Commit: false
Bug: 1112471
Change-Id: Ic4766a7ff2915c822809c8d0252936325bb53305

--- a/tracing/BUILD.gn
+++ b/tracing/BUILD.gn
@@ -9,15 +9,18 @@ import("trace_viewer.gni")
 output_resource_dir = "$root_gen_dir/content/browser/tracing"
 
 action("generate_about_tracing") {
-  script = "bin/generate_about_tracing_contents"
+  script = "//build/wrap_python2"
 
-  inputs = tracing_files + tracing_python_files
+  inputs = [
+    "bin/generate_about_tracing_contents",
+    ] + tracing_files + tracing_python_files
   outputs = [
     "$output_resource_dir/about_tracing.js",
     "$output_resource_dir/about_tracing.html",
   ]
 
   args = [
+    rebase_path("bin/generate_about_tracing_contents", root_build_dir),
     "--outdir", rebase_path(output_resource_dir, root_build_dir),
   ]
 }
