Migrate md5sum_bin -> file_hasher_bin
Bug: chromium:1120190
Change-Id: Ifaf4064af8afee308f989e09e497d875d1135b31

--- a/devil/BUILD.gn
+++ b/devil/BUILD.gn
@@ -5,19 +5,15 @@
 group("devil") {
   testonly = true
   deps = []
-  data_deps = [
-    "../third_party/gsutil",
-  ]
-  data = [
-    "devil/",
-  ]
+  data_deps = [ "../third_party/gsutil" ]
+  data = [ "devil/" ]
 
   if (is_android) {
     deps += [
       ":empty_system_webview_apk",
+      "//build/android/file_hasher",
       "//buildtools/third_party/libc++($host_toolchain)",
       "//tools/android/forwarder2",
-      "//tools/android/md5sum",
     ]
   }
 }
