--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@
 .tags
 tags
 
+# Created by devil/devil/utils/update_dependencies.py.
+/out-devil-deps/
+
 # A script some of us use to download Deep Report traces. It must live in that
 # directory but should not be committed for privacy reasons. This prevents
 # an accidental add.
@@ -28,6 +31,9 @@ perf_insights/perf_insights/download_traces.py
 
 # node_runner's npm installation folder.
 /common/node_runner/node_runner/node_modules/
+
+# Created by PRESUBMIT.py.
+/common/node_runner/node_runner/npm-debug.log
 
 # battor's binary dependency download folder.
 /common/battor/bin/battor/
