Revert "[Catapult] Fix Mac CQ resource error"
This reverts commit 3f01e83f96b0c3cc3cd4f31bc4c097c55d13bdd1.

Reason for revert: breaks the 'Dashboard Mac Tryserver'.
https://ci.chromium.org/p/catapult/builders/try/Dashboard%20Mac%20Tryserver

Original change's description:
> [Catapult] Fix Mac CQ resource error
>
> The Mac bots used to run Catapult CQ have been upgraded to MacOS
> 10.15, but the CQ is still hardcoded to use 10.13. Since Catapult
> does not depend on any particular version of MacOS, This CL removes
> specific MacOS version requirement.
>
> Bug: chromium:1128481
> Change-Id: I56c98da793e88db6c423e7e4950bcbaa9f907cfe
> Reviewed-on: https://chromium-review.googlesource.com/c/catapult/+/2411481
> Auto-Submit: John Chen <johnchen@chromium.org>
> Reviewed-by: Wenbin Zhang <wenbinzhang@google.com>

TBR=johnchen@chromium.org,wenbinzhang@google.com
NOTRY=true

# Not skipping CQ checks because original CL landed > 1 day ago.

Bug: chromium:1128481
Change-Id: Icb696b3702442d2ce928d1206891c118c5ed38eb

--- a/infra/config/cr-buildbucket.cfg
+++ b/infra/config/cr-buildbucket.cfg
@@ -63,7 +63,7 @@ buckets {
 
     builders {
       name: "Catapult Mac Tryserver"
-      dimensions: "os:Mac"
+      dimensions: "os:Mac-10.13"
     }
 
     builders {
@@ -104,7 +104,7 @@ buckets {
 
     builders {
       name: "Dashboard Mac Tryserver"
-      dimensions: "os:Mac"
+      dimensions: "os:Mac-10.13"
       recipe {
         properties_j: "dashboard_only:true"
       }
