--- a/BUILD.gn
+++ b/BUILD.gn
@@ -99,6 +99,7 @@ group("telemetry_chrome_test_support") {
     "third_party/urllib3/",
     "third_party/webapp2/",
     "third_party/webtest/",
+    "third_party/zipfile/",
   ]
 
   data_deps += [
