chromeperf: Remove Mac testing from presubmit
This change removes the Dashboard-specific Mac testing. The Dashboard
does not require mac-specific code/functionality which makes testing on
that platform redundant.

R=abennetts@google.com, fancl@chromium.org

Bug: chromium:1132884
Change-Id: I2417b019a912e0115d6dd52a8945282e7bb53d74

--- a/infra/config/cr-buildbucket.cfg
+++ b/infra/config/cr-buildbucket.cfg
@@ -30,7 +30,7 @@ buckets {
   }
   acls {
     role: WRITER
-    identity: "sullivan@chromium.org"
+    identity: "dberris@chromium.org"
   }
 
   swarming {
@@ -97,14 +97,6 @@ buckets {
     builders {
       name: "Dashboard Windows Tryserver"
       dimensions: "os:Windows"
-      recipe {
-        properties_j: "dashboard_only:true"
-      }
-    }
-
-    builders {
-      name: "Dashboard Mac Tryserver"
-      dimensions: "os:Mac"
       recipe {
         properties_j: "dashboard_only:true"
       }
