--- a/BUILD.gn
+++ b/BUILD.gn
@@ -64,6 +64,7 @@ group("telemetry_chrome_test_support") {
     "third_party/d3/",
     "third_party/depot_tools/",
     "third_party/flot/",
+    "third_party/fuchsia-sdk/",
     "third_party/gae_ts_mon/",
     "third_party/google-auth/",
     "third_party/graphy/",
