[tbmv2] Add a way to add alert groupings to histograms
We will use these grouping keys to group alerts better on the dashboard.

Added alert grouping to loading metrics and cpu metrics as examples of
two way to add grouping.

Bug: chrome-operations:98
Change-Id: Id9f0fe1aaf9063f9f2edaea302d3434259d2dde9

--- a/tracing/trace_viewer.gni
+++ b/tracing/trace_viewer.gni
@@ -559,6 +559,7 @@ tracing_js_html_files = [
   "tracing/ui/tracks/x_axis_track.html",
   "tracing/ui/view_specific_brushing_state.html",
   "tracing/value/csv_builder.html",
+  "tracing/value/diagnostics/alert_groups.html",
   "tracing/value/diagnostics/all_diagnostics.html",
   "tracing/value/diagnostics/breakdown.html",
   "tracing/value/diagnostics/collected_related_event_set.html",
