[skia-migration] Fix skia-bridge module name in app yaml
Change-Id: I439b89f6abce79ea3e70f3341bcc64a6a57c5fef

--- a/dashboard/skia-bridge.yaml
+++ b/dashboard/skia-bridge.yaml
@@ -11,7 +11,7 @@ entrypoint: gunicorn -b:$PORT dashboard.skia_perf.main:APP
 
 handlers:
 - url: /.*
-  script: dashboard.skia_perf.main.APP
+  script: dashboard.skia_bridge.main.APP
   secure: always
 
 readiness_check:
