[skia-migration] Fix skia-bridge module name in app yaml
Change-Id: I439b89f6abce79ea3e70f3341bcc64a6a57c5fef

--- a/dashboard/skia-bridge.yaml
+++ b/dashboard/skia-bridge.yaml
@@ -9,9 +9,20 @@ runtime_config:
 
 entrypoint: gunicorn -b:$PORT dashboard.skia_perf.main:APP
 
+automatic_scaling:
+  min_num_instances: 4
+  max_num_instances: 20
+  cool_down_period_Sec: 180
+  cpu_utilization:
+    target_utilization: 0.6
+
+resources:
+  cpu: 4
+  memory_gb: 8
+
 handlers:
 - url: /.*
-  script: dashboard.skia_perf.main.APP
+  script: dashboard.skia_bridge.main.APP
   secure: always
 
 readiness_check:
