--- a/dashboard/skia-bridge.yaml
+++ b/dashboard/skia-bridge.yaml
@@ -8,6 +8,7 @@ runtime_config:
   python_version: 3.7
 
 entrypoint: gunicorn -b:$PORT dashboard.skia_bridge.main:APP
+app_engine_apis: true
 
 automatic_scaling:
   min_num_instances: 4
