--- a/skia_bridge/requirements.txt
+++ b/skia_bridge/requirements.txt
@@ -7,6 +7,7 @@ google-auth==2.12.0
 google-auth-httplib2==0.1.0
 
 google-cloud-logging==3.1.2
+google-cloud-ndb
 
 # The debugger is being deprecated Q2 2023
 google-python-cloud-debugger==3.2
