Change job-queue's retry to 0 to avoid jobs from being labeled as Cancelled.
Remove skia-perf-upload-queue in the process.

Bug: chromium:1442267
Change-Id: Ida048821753fceda38f8019a8df644247d460e6c

--- a/dashboard/cloudbuild-dashboard-push-on-green-py3.yaml
+++ b/dashboard/cloudbuild-dashboard-push-on-green-py3.yaml
@@ -48,6 +48,11 @@ steps:
     pinpoint.yaml,
     skia-bridge.yaml,
   ]
+- name: 'gcr.io/cloud-builders/gcloud'
+  dir: 'deploy-dashboard'
+  args: [
+    'app', 'deploy', 'queue.yaml',
+  ]
 # We check in the target versions to avoid unintended traffic changes.
 - name: 'gcr.io/cloud-builders/gcloud'
   id: 'Set traffic for default service'
