Roll perf dashboard default 9f3ef9c..d1087f3
https://chromium.googlesource.com/catapult.git/+log/9f3ef9c..d1087f3

Bug: chromium:1451641
Change-Id: Id595b511eef0bbf3f78dd914166ea9a20a34360f

--- a/dashboard/cloudbuild-dashboard-push-on-green-py3.yaml
+++ b/dashboard/cloudbuild-dashboard-push-on-green-py3.yaml
@@ -58,7 +58,8 @@ steps:
   dir: 'deploy-dashboard'
   args: [
     'app', 'services', 'set-traffic', 'default',
-    '--splits=cloud-build-568df55=1'
+    '--splits=cloud-build-
+saving CL description to /Users/jeffyoon/Projects/depot_tools/.git_cl_description_backup=1'
   ]
 - name: 'gcr.io/cloud-builders/gcloud'
   id: 'Set traffic for api service'
