--- a/perf_issue_service/cloudbuild-perf-issue-service.yaml
+++ b/perf_issue_service/cloudbuild-perf-issue-service.yaml
@@ -9,3 +9,10 @@ steps:
     app, deploy, '--no-promote', '--version', 'cloud-build-${SHORT_SHA}',
     app.yaml,
   ]
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 'Set traffic for the service'
+  dir: 'deploy-dashboard'
+  args: [
+    'app', 'services', 'set-traffic', 'perf-issue-service',
+    '--splits=cloud-build-7f835d2=1'
+  ]
