[chromeperf] allow set traffic on perf-issue-service
Adding a step to set traffic as the other chromeperf services.

Change-Id: Ib63989172e87c08a4f4e124a22679cfffb76f15c

--- a/perf_issue_service/cloudbuild-perf-issue-service.yaml
+++ b/perf_issue_service/cloudbuild-perf-issue-service.yaml
@@ -9,3 +9,10 @@ steps:
     app, deploy, '--no-promote', '--version', 'cloud-build-${SHORT_SHA}',
     app.yaml,
   ]
+- name: 'gcr.io/cloud-builders/gcloud'
+  id: 'Set traffic for the service'
+  dir: 'perf_issue_service'
+  args: [
+    'app', 'services', 'set-traffic', 'perf-issue-service',
+    '--splits=cloud-build-7f835d2=1'
+  ]
