--- a/dashboard/cloudbuild-dashboard-push-on-green-py3.yaml
+++ b/dashboard/cloudbuild-dashboard-push-on-green-py3.yaml
@@ -79,7 +79,7 @@ steps:
   dir: 'deploy-dashboard'
   args: [
     'app', 'services', 'set-traffic', 'upload-processing',
-    '--splits=cloud-build-cef5cf0=1',
+    '--splits=cloud-build-6936c2e=.9,cloud-build-6a4a361=.1',
   ]
 - name: 'gcr.io/cloud-builders/gcloud'
   id: 'Set traffic for pinpoint service'
