--- a/dashboard/cloudbuild-dashboard-push-on-green-py3.yaml
+++ b/dashboard/cloudbuild-dashboard-push-on-green-py3.yaml
@@ -79,7 +79,7 @@ steps:
   dir: 'deploy-dashboard'
   args: [
     'app', 'services', 'set-traffic', 'upload-processing',
-    '--splits=cloud-build-c684fe0=1',
+    '--splits=cloud-build-c684fe0=.5,cloud-build-0368c6e=.5',
   ]
 - name: 'gcr.io/cloud-builders/gcloud'
   id: 'Set traffic for pinpoint service'
