--- a/devil/BUILD.gn
+++ b/devil/BUILD.gn
@@ -14,7 +14,7 @@ group("devil") {
   if (is_android) {
     deps += [
       ":empty_system_webview_apk",
-      "//buildtools/third_party/libc++($host_toolchain)",
+      "//third_party/libc++($host_toolchain)",
       "//tools/android/forwarder2",
       "//tools/android/md5sum",
     ]
